--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <div class="container">
       <form id="survey-form" action="submit" method="post">
       <fieldset>
-          <label for="name">Name
-            <input type="text" name="name" id="name" require placeholder="Name">
+          <label for="name" id="name-label">Name
+            <input type="text" name="name" id="name" required placeholder="Name">
           </label>
-          <label for="email">Email
-            <input type="email" name="email" id="email" require placeholder="Email">
+          <label for="email" id="email-label">Email
+            <input type="email" name="email" id="email" required placeholder="Email">
           </label>
-          <label for="age">Age (optional)
-            <input type="number" name="age" id="age" min="13" max="120" placeholder="Age">
+          <label for="number" id="number-label">Age (optional)
+            <input type="number" name="number" id="number" min="13" max="120" placeholder="Age">
           </label>
           <label for="role">Which option best describes your current role?
             <select id="dropdown" name="role">
@@ -30,10 +30,10 @@
           </label>
           <label>Would you recommend our plataform to a friend?</label>
           <label for="recommend">
-            <input type="radio" name="recommend" id="recommend"> Yes
+            <input type="radio" name="recommend" id="recommend" value="Yes"> Yes
           </label>
           <label for="recommend">
-            <input type="radio" name="recommend" id="recommend"> No
+            <input type="radio" name="recommend" id="recommend" value="No"> No
           </label>
           <label for="feature">What is your favorite feature of freeCodeCamp?
             <select id="feature" name="feature">
